Fix for infotip overlapping small buttons (e.g. competitor popup icon)

--- a/JsPlc.Ssc.PetrolPricing/JsPlc.Ssc.PetrolPricing.Portal/Content/infotips.css
+++ b/JsPlc.Ssc.PetrolPricing/JsPlc.Ssc.PetrolPricing.Portal/Content/infotips.css
@@ -16,7 +16,7 @@
 .infotip-above::after,
 .infotip-below::after {
     border-style: solid;
-    border-width: 20px 5px 20px 5px;
+    border-width: 8px 8px 8px 8px;
     content: "";
     left: 50%;
     margin-left: -10px;
@@ -31,7 +31,7 @@
 
 .infotip-below::after {
     border-color: transparent transparent #333 transparent;
-    bottom: calc(100% - 2px)
+    bottom: calc(100% + 2px)
 }
 
 [data-infotip]:hover {
